# mcp-tool-risk-audit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  highstar.yaml  pyproject.toml  setup.py
examples/: mcp-servers-list.json  mcp-servers-map.json
releases/: v0.1.0.md  v0.1.1.md
rules/: default.json
src/mcp_tool_risk_audit/: __init__.py  cli.py
tests/: test_cli.py
