[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-tool-risk-audit"
version = "0.1.0"
description = "Audit MCP tool configs and manifests for security and operational risk."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "alexzhu0" }]
keywords = ["ai-tools", "mcp", "security", "cli", "audit", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities"
]

[project.scripts]
mcp-tool-risk-audit = "mcp_tool_risk_audit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
